misc: update default widget format to four-thirds

--- a/index.html
+++ b/index.html
@@ -32,7 +32,17 @@
     <script type="text/babel" src="js/episode.js"></script>
     <script type="text/babel" src="js/index.js"></script>
     <!-- <script src="../assets/loader.js"></script> -->
-    <script src="https://components.staytuned.io/0.3.15/staytuned/staytuned.esm.js" type="module" crossorigin="anonymous" async=""></script>
-    <script src="https://components.staytuned.io/0.3.15/staytuned/staytuned.js" nomodule="" crossorigin="anonymous" async=""></script>
+    <script
+      src="https://components.staytuned.io/0.3.15/staytuned/staytuned.esm.js"
+      type="module"
+      crossorigin="anonymous"
+      async=""
+    ></script>
+    <script
+      src="https://components.staytuned.io/0.3.15/staytuned/staytuned.js"
+      nomodule=""
+      crossorigin="anonymous"
+      async=""
+    ></script>
   </body>
 </html>
