--- a/staytuned-cordova-sdk-demo/public/index.html
+++ b/staytuned-cordova-sdk-demo/public/index.html
@@ -24,21 +24,24 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Cordova SDK - React Demo</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    <div id="sdk-react-demo"></div>
+    <staytuned-mobile-sdk-player />
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+      <script
+      src="https://components.staytuned.io/0.3.15/staytuned/staytuned.esm.js"
+      type="module"
+      crossorigin="anonymous"
+      async=""
+    ></script>
+    <script
+      src="https://components.staytuned.io/0.3.15/staytuned/staytuned.js"
+      nomodule=""
+      crossorigin="anonymous"
+      async=""
+    ></script>
     <script src="cordova.js" type="text/javascript"></script>
   </body>
 </html>
